--- a/lang/pt.json
+++ b/lang/pt.json
@@ -81,6 +81,8 @@
 
     "p.title": "Publicações",
 
+    "deep.title": "Beating Soccer Robots in the Real World by Reinforcement Learning and Sim-to-Real",
+
     "join_open":"No momento, a seletiva para este ano ainda não foi aberta. Aguarde um pouco, avisaremos quando ela começar!",
     "projects": "Projetos",
     "eletronics": "Eletrônica",
