Adding new images

--- a/lang/en.json
+++ b/lang/en.json
@@ -110,5 +110,7 @@
     "faq.q8":"How the stage 3 works?",
     "faq.a8":"In stage 3 the candidate choose a area and develop a project in it, being presented in the end.",
 
-    "talk": "Talk to us!"
+    "talk": "Talk to us!",
+
+    "cat.Professor/Pesquisador": "Teacher / Research"
 }
