Changes in lang

--- a/lang/en.json
+++ b/lang/en.json
@@ -112,5 +112,5 @@
 
     "talk": "Talk to us!",
 
-    "cat.Professor/Pesquisador": "Teacher / Research"
+    "cat.Professor/Pesquisador": "Professor"
 }
