--- a/lang/pt.json
+++ b/lang/pt.json
@@ -112,6 +112,6 @@
 
     "talk": "Fale com a gente!",
 
-    "cat.Professor/Pesquisador": "Professor(a) / Pesquisador"
+    "cat.Professor/Pesquisador": "Professor(a)"
 }
 
