Adding results IronCup2020

--- a/lang/en.json
+++ b/lang/en.json
@@ -40,12 +40,14 @@
     "s.img2": "Line Follower base",
     "s.desc": "Line Follower is a category that has a goal to develop autonomous robots that can finish a cricuit fast as possible. The robot has a reflectance sensor for be able to identify the route defined by a tape. The main challenges in this category are to produce a light and fast robot and develop a efficient and precise control.",
     "cat.ln.r": "Results",
+    "cat.ln.results": "19th - IronCup 2020",
     
     "cat.2d" : "2D Simulation",
     "cat.2d.img1": "Strategy Development",
     "cat.2d.img2": "Using 2D Simulation tools",
     "cat.2d.desc": "In the 2D Simulation League, two teams of eleven autonomous software programs (called agents) each play soccer in a two-dimensional virtual soccer stadium represented by a central server, called SoccerServer. This server knows everything about the game, i.e. the current position of all players and the ball, the physics and so on. The game further relies on the communication between the server and each agent. On the one hand each player receives relative and noisy input of his virtual sensors (visual, acoustic and physical) and may on the other hand perform some basic commands (like dashing, turning or kicking) in order to influence its environment.",
     "cat.2d.r": "Results",
+    "cat.2d.results": "6th - IronCup 2020",
     "cat.2d.results1": "9th - RoboCup 2019",
     "cat.2d.results2": "2th - LARC 2019",
     "cat.2d.results3": "6th - IronCup 2018",
@@ -60,6 +62,7 @@
     "cat.vss.lead2" : "Deep Learning Approach",
     "cat.vss.desc2" : "In this approach we train the agents using reinforcement learning, that is we give a reward to actions good and bad for the agent, he learn maximize the reward and with this the best actions for every situation.",
     "cat.vss.r": "Results",
+    "cat.vss.results": "3th/5th - IronCup 2020",
     "cat.vss.results1": "4th/5th - LARC 2019",
     "cat.vss.results2": "3th - IronCup 2019",
     "cat.vss.results3": "3th - LARC - 2018",
