--- a/lang/pt.json
+++ b/lang/pt.json
@@ -40,12 +40,14 @@
     "s.img2":"Base do seguidor de linha",
     "s.desc":"Seguidor de linha é uma categoria que tem o objetivo de desenvolver robôs autônomos que percorrem um percurso no menor tempo possível. O robô possui sensor de reflectância para poder identificar o trajeto delimitado por uma fita. Os principais desafios da categoria são a produção de robô leve e rápido e o desenvolvimento um controle eficiente e preciso.",
     "cat.ln.r": "Resultados",
+    "cat.ln.results": "19° - IronCup 2020",
     
     "cat.2d" : "Simulação 2D",
     "cat.2d.img1": "Desenvolvimento da estratégia",
     "cat.2d.img2": "Ferramentas de simulação 2D",
     "cat.2d.desc": "Na Simulação 2D duas equipes de onze agentes autônomos jogam futebol em um estádio de futebol virtual bidimensional representado por um servidor central, chamado SoccerServer. Este servidor sabe tudo sobre o jogo, ou seja, a posição atual de todos os jogadores e a bola, a física e assim por diante. O jogo conta ainda com a comunicação entre o servidor e cada agente. Por um lado, cada jogador recebe uma entrada relativa e ruidosa de seus sensores virtuais (visuais, acústicos e físicos) e, por outro lado, pode executar alguns comandos básicos (como correr, girar ou chutar) para influenciar seu ambiente.",
     "cat.2d.r": "Results",
+    "cat.2d.results" : "6° - IronCup 2020",
     "cat.2d.results1": "9° - RoboCup 2019",
     "cat.2d.results2": "2° - LARC 2019",
     "cat.2d.results3": "6° - IronCup 2018",
@@ -60,6 +62,7 @@
     "cat.vss.lead2" : "Abordagem com Deep Learning",
     "cat.vss.desc2" : "Nessa abordagem nós treinamos os agentes usando aprendizado por reforço, ou seja, damos uma recompensa para ações boas e ruins dos agentes, ele aprende a maximizar a recompensa e com isso as melhores ações para cada situação.",
     "cat.vss.r": "Resultados",
+    "cat.vss.results": "3°/5° - IronCup 2020",
     "cat.vss.results1": "4°/5° - LARC 2019",
     "cat.vss.results2": "3° - IronCup 2019",
     "cat.vss.results3": "3° - LARC 2018",
