join-us open warn placed

--- a/lang/pt.json
+++ b/lang/pt.json
@@ -84,7 +84,7 @@
 
     "p.title": "Publicações",
 
-    "join_open":"No momento, a seletiva para este ano ainda não foi aberta. Aguarde um pouco, avisaremos quando ela começar!",
+    "join_open":"A seletiva RobôCIn 2020 está aberta até o dia 30/11.",
     "projects": "Projetos",
     "eletronics": "Eletrônica",
     "p.eletronics.2019": "Circuitos e Arduino",
