--- a/lang/pt.json
+++ b/lang/pt.json
@@ -88,7 +88,7 @@
 
     "p.title": "Publicações",
 
-    "join_open":"A seletiva RobôCIn 2020 está aberta até o dia 30/11.",
+    "join_open":"As inscrições para a seletiva RobôCIn 2020 estão abertas até dia 30/11.",
     "projects": "Projetos",
     "eletronics": "Eletrônica",
     "p.eletronics.2019": "Circuitos e Arduino",
