fix(en.json): update ps-2020 dates (en)

--- a/lang/en.json
+++ b/lang/en.json
@@ -88,7 +88,7 @@
 
     "p.title": "Papers",
 
-    "join_open": "At the moment, the joining process is not open. Wait a moment, we'll tell you when it does :)",
+    "join_open": "The registration period is open until 02/12.",
     "projects": "Projects",
     "eletronics": "Eletronics",
     "p.eletronics.2019": "Circuits and Arduino",
