update(en/pt.json): dates in main warn

--- a/lang/en.json
+++ b/lang/en.json
@@ -88,7 +88,7 @@
 
     "p.title": "Papers",
 
-    "join_open": "The registration period is open until 02/12.",
+    "join_open": "The registration period is closed! Projects will be available in 07/12.",
     "projects": "Projects",
     "eletronics": "Eletronics",
     "p.eletronics.2019": "Circuits and Arduino",
