update(pt.json): update main warn description

--- a/lang/pt.json
+++ b/lang/pt.json
@@ -88,7 +88,7 @@
 
     "p.title": "Publicações",
 
-    "join_open":"Inscrições encerradas! Os projetos serão divulgados dia 07/12.",
+    "join_open":"Projetos disponíveis. Chequem seus emails para mais infomrações!",
     "projects": "Projetos",
     "eletronics": "Eletrônica",
     "p.eletronics.2019": "Circuitos e Arduino",
