chore(lang): update join us page warn

--- a/lang/en.json
+++ b/lang/en.json
@@ -88,7 +88,7 @@
 
     "p.title": "Papers",
 
-    "join_open": "Projects available. Check your emails for more info!",
+    "join_open": "The joining process is not open, wait a bit, we will bring news soon!",
     "projects": "Projects",
     "eletronics": "Eletronics",
     "p.eletronics.2019": "Circuits and Arduino",
