--- a/lang/pt.json
+++ b/lang/pt.json
@@ -88,7 +88,7 @@
 
     "p.title": "Publicações",
 
-    "join_open":"Projetos disponíveis. Chequem seus emails para mais informações!",
+    "join_open":"A seletiva ainda não começou, aguarde um pouco, avisaremos quando ela for começar! :)",
     "projects": "Projetos",
     "eletronics": "Eletrônica",
     "p.eletronics.2019": "Circuitos e Arduino",
