resultados: atualização dos resultados da larc 2021

--- a/lang/en.json
+++ b/lang/en.json
@@ -47,12 +47,13 @@
     "cat.2d.img2": "Using 2D Simulation tools",
     "cat.2d.desc": "In the 2D Simulation League, two teams of eleven autonomous software programs (called agents) each play soccer in a two-dimensional virtual soccer stadium represented by a central server, called SoccerServer. This server knows everything about the game, i.e. the current position of all players and the ball, the physics and so on. The game further relies on the communication between the server and each agent. On the one hand each player receives relative and noisy input of his virtual sensors (visual, acoustic and physical) and may on the other hand perform some basic commands (like dashing, turning or kicking) in order to influence its environment.",
     "cat.2d.r": "Results",
+    "cat.2d.results" : "1st - LARC 2021",
     "cat.2d.results0": "3rd - LARC 2020",
-    "cat.2d.results": "6th - IronCup 2020",
-    "cat.2d.results1": "9th - RoboCup 2019",
-    "cat.2d.results2": "2th - LARC 2019",
-    "cat.2d.results3": "6th - IronCup 2018",
-    "cat.2d.results4": "4th - LARC 2018",
+    "cat.2d.results1": "6th - IronCup 2020",
+    "cat.2d.results2": "9th - RoboCup 2019",
+    "cat.2d.results3": "2th - LARC 2019",
+    "cat.2d.results4": "6th - IronCup 2018",
+    "cat.2d.results5": "4th - LARC 2018",
 
     "cat.vss" : "Very Small Size Soccer",
     "cat.vss.img1" : "Tags of robots used to identification.",
@@ -63,14 +64,15 @@
     "cat.vss.lead2" : "Deep Learning Approach",
     "cat.vss.desc2" : "In this approach we train the agents using reinforcement learning, that is we give a reward to actions good and bad for the agent, he learn maximize the reward and with this the best actions for every situation.",
     "cat.vss.r": "Results",
+    "cat.vss.results": "1st/2th - LARC 2021",
     "cat.vss.results0": "4th/5th - LARC 2020",
-    "cat.vss.results": "3th/5th - IronCup 2020",
-    "cat.vss.results1": "4th/5th - LARC 2019",
-    "cat.vss.results2": "3th - IronCup 2019",
-    "cat.vss.results3": "3th - LARC - 2018",
-    "cat.vss.results4": "3th - IronCup 2018",
-    "cat.vss.results5": "5th - LARC 2017",
-    "cat.vss.results6": "16th - LARC 2016",
+    "cat.vss.results1": "3th/5th - IronCup 2020",
+    "cat.vss.results2": "4th/5th - LARC 2019",
+    "cat.vss.results3": "3th - IronCup 2019",
+    "cat.vss.results4": "3th - LARC - 2018",
+    "cat.vss.results5": "3th - IronCup 2018",
+    "cat.vss.results6": "5th - LARC 2017",
+    "cat.vss.results7": "16th - LARC 2016",
 
     "cat.ssl" : "Small Size League",
     "cat.ssl.img1" : "Captured photo in RoboCup 2019.", 
@@ -78,6 +80,7 @@
     "cat.ssl.desc" : "Small Size League (SSL) is a competition that requires development in several areas. We develop the mechanic model, eletronic and communication systems and artificial inteligence of the robots. A Small Size robot soccer game takes place between two teams of six robots each. The robot has limited dimensions, must fit within an 180 mm diameter circle and must be no higher than 15 cm. All objects on the field are tracked by a standardized vision system that processes the data provided by four cameras.",
     "cat.ssl.results.champion": "Champions!",
     "cat.ssl.r": "Results",
+    "cat.ssl.results": "1st - LARC 2021",
     "cat.ssl.results0": "1st - LARC 2020",
     "cat.ssl.results1": "3th/4th - RoboCup 2019", 
     "cat.ssl.results2": "5th - LARC 2019",
