2d : acrescentando resultados da robocup e ironcup 2021

--- a/lang/en.json
+++ b/lang/en.json
@@ -48,12 +48,14 @@
     "cat.2d.desc": "In the 2D Simulation League, two teams of eleven autonomous software programs (called agents) each play soccer in a two-dimensional virtual soccer stadium represented by a central server, called SoccerServer. This server knows everything about the game, i.e. the current position of all players and the ball, the physics and so on. The game further relies on the communication between the server and each agent. On the one hand each player receives relative and noisy input of his virtual sensors (visual, acoustic and physical) and may on the other hand perform some basic commands (like dashing, turning or kicking) in order to influence its environment.",
     "cat.2d.r": "Results",
     "cat.2d.results" : "1st - LARC 2021",
-    "cat.2d.results0": "3rd - LARC 2020",
-    "cat.2d.results1": "6th - IronCup 2020",
-    "cat.2d.results2": "9th - RoboCup 2019",
-    "cat.2d.results3": "2th - LARC 2019",
-    "cat.2d.results4": "6th - IronCup 2018",
-    "cat.2d.results5": "4th - LARC 2018",
+    "cat.2d.results0": "3rd - IronCup 2021",
+    "cat.2d.results1": "7th - RoboCup 2021",
+    "cat.2d.results2": "3rd - LARC 2020",
+    "cat.2d.results3": "6th - IronCup 2020",
+    "cat.2d.results4": "9th - RoboCup 2019",
+    "cat.2d.results5": "2th - LARC 2019",
+    "cat.2d.results6": "6th - IronCup 2018",
+    "cat.2d.results7": "4th - LARC 2018",
 
     "cat.vss" : "Very Small Size Soccer",
     "cat.vss.img1" : "Tags of robots used to identification.",
