--- a/lang/pt.json
+++ b/lang/pt.json
@@ -59,6 +59,8 @@
     "cat.2d.results6": "6° - IronCup 2018",
     "cat.2d.results7": "4° - LARC 2018",
 
+    "cat.dvss": "Deep Learning VSS",
+
     "cat.vss" : "Very Small Size Soccer",
     "cat.vss.img1" : "Tags dos robôs utilizadas para identificação.",
     "cat.vss.img2" : "Interface do software.",
