feat(catgories): add results table --needs revision

--- a/lang/en.json
+++ b/lang/en.json
@@ -42,22 +42,28 @@
     "s.img2": "Line Follower base",
     "s.desc": "Line Follower is a category that has a goal to develop autonomous robots that can finish a cricuit fast as possible. The robot has a reflectance sensor for be able to identify the route defined by a tape. The main challenges in this category are to produce a light and fast robot and develop a efficient and precise control.",
     "cat.ln.r": "Results",
-    "cat.ln.results": "19th - IronCup 2020",
+    "cat.ln.results": "19th",
     
     "cat.2d" : "2D Simulation",
     "cat.2d.img1": "Strategy Development",
     "cat.2d.img2": "Using 2D Simulation tools",
     "cat.2d.desc": "In the 2D Simulation League, two teams of eleven autonomous software programs (called agents) each play soccer in a two-dimensional virtual soccer stadium represented by a central server, called SoccerServer. This server knows everything about the game, i.e. the current position of all players and the ball, the physics and so on. The game further relies on the communication between the server and each agent. On the one hand each player receives relative and noisy input of his virtual sensors (visual, acoustic and physical) and may on the other hand perform some basic commands (like dashing, turning or kicking) in order to influence its environment.",
     "cat.2d.r": "Results",
-    "cat.2d.results" : "1st - LARC 2021",
-    "cat.2d.results0": "3rd - IronCup 2021",
-    "cat.2d.results1": "7th - RoboCup 2021",
-    "cat.2d.results2": "3rd - LARC 2020",
-    "cat.2d.results3": "6th - IronCup 2020",
-    "cat.2d.results4": "9th - RoboCup 2019",
-    "cat.2d.results5": "2th - LARC 2019",
-    "cat.2d.results6": "6th - IronCup 2018",
-    "cat.2d.results7": "4th - LARC 2018",
+    
+    "cat.2d.robocup21": "7th",
+    "cat.2d.robocup20": "Postponed",
+    "cat.2d.robocup19": "9th",
+    "cat.2d.robocup18": "N/A",
+    
+    "cat.2d.larc21" : "1st" ,
+    "cat.2d.larc20": "3rd",
+    "cat.2d.larc19": "2th",
+    "cat.2d.larc18": "4th",
+    
+    "cat.2d.iron21": "3rd",
+    "cat.2d.iron20": "6th",
+    "cat.2d.iron19": "N/A",
+    "cat.2d.iron18": "6th",
 
     "cat.dvss": "Deep Learning VSS",
 
@@ -70,16 +76,18 @@
     "cat.vss.lead2" : "Deep Learning Approach",
     "cat.vss.desc2" : "In this approach we train the agents using reinforcement learning, that is we give a reward to actions good and bad for the agent, he learn maximize the reward and with this the best actions for every situation.",
     "cat.vss.r": "Results",
-    "cat.vss.results": "1st/2th - LARC 2021",
-    "cat.vss.results0": "4th/5th - LARC 2020",
-    "cat.vss.results1": "3th/5th - IronCup 2020",
-    "cat.vss.results2": "4th/5th - LARC 2019",
-    "cat.vss.results3": "3th - IronCup 2019",
-    "cat.vss.results4": "3th - LARC - 2018",
-    "cat.vss.results5": "3th - IronCup 2018",
-    "cat.vss.results6": "5th - LARC 2017",
-    "cat.vss.results7": "16th - LARC 2016",
-    "cat.vss.results8": "1st - Iron Cup 2021",
+
+    "cat.vss.larc21": "1st DET<br>2nd RL",
+    "cat.vss.larc20": "4th DET <br> 5th RL",
+    "cat.vss.larc19": "4th DET <br> 5th RL",
+    "cat.vss.larc18": "3th",
+    "cat.vss.larc17": "5th",
+    "cat.vss.larc16": "16th",
+    
+    "cat.vss.iron21": "1st",
+    "cat.vss.iron20": "3th RL <br> 5th DET",
+    "cat.vss.iron19": "3th",
+    "cat.vss.iron18": "3th",
 
     "cat.ssl" : "Small Size League",
     "cat.ssl.img1" : "Captured photo in RoboCup 2019.", 
@@ -87,12 +95,17 @@
     "cat.ssl.desc" : "Small Size League (SSL) is a competition that requires development in several areas. We develop the mechanic model, eletronic and communication systems and artificial inteligence of the robots. A Small Size robot soccer game takes place between two teams of six robots each. The robot has limited dimensions, must fit within an 180 mm diameter circle and must be no higher than 15 cm. All objects on the field are tracked by a standardized vision system that processes the data provided by four cameras.",
     "cat.ssl.results.champion": "Champions!",
     "cat.ssl.r": "Results",
-    "cat.ssl.results": "1st - LARC 2021",
-    "cat.ssl.results0": "1st - LARC 2020",
-    "cat.ssl.results1": "3th/4th - RoboCup 2019", 
-    "cat.ssl.results2": "5th - LARC 2019",
-    "cat.ssl.results3": "5th - LARC 2018",
-    "cat.ssl.results4": "3rd - Robocup 2021",
+
+    "cat.ssl.robocup21": "3rd Div A/B<br>1st Ball placement technical challenge<br>5th Hardware challenge",
+    "cat.ssl.robocup20": "Postponed",
+    "cat.ssl.robocup19": "3rd Div B", 
+    "cat.ssl.robocup18": "N/A",
+
+    "cat.ssl.larc21": "1st",
+    "cat.ssl.larc20": "1st",
+    "cat.ssl.larc19": "5th",
+    "cat.ssl.larc18": "5th",
+
 
     "m.title": "Team member",
     "m.desc": "We are 51 members!",
