--- a/lang/pt.json
+++ b/lang/pt.json
@@ -42,22 +42,28 @@
     "s.img2":"Base do seguidor de linha",
     "s.desc":"Seguidor de linha é uma categoria que tem o objetivo de desenvolver robôs autônomos que percorrem um percurso no menor tempo possível. O robô possui sensor de reflectância para poder identificar o trajeto delimitado por uma fita. Os principais desafios da categoria são a produção de robô leve e rápido e o desenvolvimento um controle eficiente e preciso.",
     "cat.ln.r": "Resultados",
-    "cat.ln.results": "19° - IronCup 2020",
+    "cat.ln.results": "19°",
     
     "cat.2d" : "Simulação 2D",
     "cat.2d.img1": "Desenvolvimento da estratégia",
     "cat.2d.img2": "Ferramentas de simulação 2D",
     "cat.2d.desc": "Na Simulação 2D duas equipes de onze agentes autônomos jogam futebol em um estádio de futebol virtual bidimensional representado por um servidor central, chamado SoccerServer. Este servidor sabe tudo sobre o jogo, ou seja, a posição atual de todos os jogadores e a bola, a física e assim por diante. O jogo conta ainda com a comunicação entre o servidor e cada agente. Por um lado, cada jogador recebe uma entrada relativa e ruidosa de seus sensores virtuais (visuais, acústicos e físicos) e, por outro lado, pode executar alguns comandos básicos (como correr, girar ou chutar) para influenciar seu ambiente.",
     "cat.2d.r": "Results",
-    "cat.2d.results" : "1° - LARC 2021",
-    "cat.2d.results0": "3° - IronCup 2021",
-    "cat.2d.results1" : "7° - RoboCup 2021",
-    "cat.2d.results2" : "6° - IronCup 2020",
-    "cat.2d.results3": "3° - LARC 2020",
-    "cat.2d.results4": "9° - RoboCup 2019",
-    "cat.2d.results5": "2° - LARC 2019",
-    "cat.2d.results6": "6° - IronCup 2018",
-    "cat.2d.results7": "4° - LARC 2018",
+    
+    "cat.2d.robocup21" : "7°",
+    "cat.2d.robocup20": "Adiado",
+    "cat.2d.robocup19": "9°",
+    "cat.2d.robocup18": "N/A",
+
+    "cat.2d.larc21" : "1°",
+    "cat.2d.larc20": "3°",
+    "cat.2d.larc19": "2°",
+    "cat.2d.larc18": "4°",
+    
+    "cat.2d.iron21": "3°",
+    "cat.2d.iron20" : "6°",
+    "cat.2d.iron19": "N/A",
+    "cat.2d.iron18": "6°",
 
     "cat.dvss": "Deep Learning VSS",
 
@@ -70,16 +76,18 @@
     "cat.vss.lead2" : "Abordagem com Deep Learning",
     "cat.vss.desc2" : "Nessa abordagem nós treinamos os agentes usando aprendizado por reforço, ou seja, damos uma recompensa para ações boas e ruins dos agentes, ele aprende a maximizar a recompensa e com isso as melhores ações para cada situação.",
     "cat.vss.r": "Resultados",
-    "cat.vss.results": "1°/2° - LARC 2021",
-    "cat.vss.results0": "4°/5° - LARC 2020",
-    "cat.vss.results1": "3°/5° - IronCup 2020",
-    "cat.vss.results2": "4°/5° - LARC 2019",
-    "cat.vss.results3": "3° - IronCup 2019",
-    "cat.vss.results4": "3° - LARC 2018",
-    "cat.vss.results5": "3° - IronCup 2018",
-    "cat.vss.results6": "5° - LARC 2017",
-    "cat.vss.results7": "16° - LARC 2016",
-    "cat.vss.results8": "1° - Iron Cup 2021",
+
+    "cat.vss.larc21": "1° DET<br>2° RL",
+    "cat.vss.larc20": "4° DET <br> 5° RL",
+    "cat.vss.larc19": "4° DET <br> 5° RL",
+    "cat.vss.larc18": "3°",
+    "cat.vss.larc17": "5°",
+    "cat.vss.larc16": "16°",
+    
+    "cat.vss.iron21": "1°",
+    "cat.vss.iron20": "3° RL <br> 5° DET",
+    "cat.vss.iron19": "3°",
+    "cat.vss.iron18": "3°",
 
     "cat.ssl" : "Small Size League",
     "cat.ssl.img1" : "Imagem capturada na RoboCup 2019.",
@@ -87,12 +95,16 @@
     "cat.ssl.desc" : "Small Size League (SSL) é uma competição que requer o desenvolvimento de várias áreas. Nós desenvolvemos o modelo mecânico, os sistemas eletrônicos e de comunicação e a inteligência artifical dos robôs. Um jogo de SSL ocorre entre duas equipes de seis robôs cada. Os robôs tem dimensões limitadas, o robô deve caber dentro de um círculo de 180 mm de diâmetro e não deve ter mais de 15 cm. Todos os objetos no campo são identificados e normalizados pelos sistema de visão que processa os dados proveniente pelas 4 cameras.",
     "cat.ssl.r": "Resultados",
     "cat.ssl.results.champion": "Campeões!",
-    "cat.ssl.results": "1° - LARC 2021",
-    "cat.ssl.results0": "1° - LARC 2020",
-    "cat.ssl.results1": "3°/4° - RoboCup 2019", 
-    "cat.ssl.results2": "5° - LARC 2019",
-    "cat.ssl.results3": "5° - LARC 2018",
-    "cat.ssl.results4": "3° Lugar - Robocup 2021",
+    
+    "cat.ssl.robocup21": "3° Div A/B<br>1° Desafio técnico<br> 5° Desafio de Hardware",
+    "cat.ssl.robocup20": "Adiado",
+    "cat.ssl.robocup19": "3° Div B", 
+    "cat.ssl.robocup18": "N/A",
+
+    "cat.ssl.larc21": "1°",
+    "cat.ssl.larc20": "1°",
+    "cat.ssl.larc19": "5°",
+    "cat.ssl.larc18": "5°",
 
     "m.title": "Membros da equipe",
     "m.desc": "Nós somos 51 integrantes!",
