fix(en.json): update ssl results

--- a/lang/en.json
+++ b/lang/en.json
@@ -109,7 +109,7 @@
 
     "cat.ssl.robocup21": "3rd Div A/B<br>1st Ball placement technical challenge<br>5th Hardware challenge",
     "cat.ssl.robocup20": "Postponed",
-    "cat.ssl.robocup19": "3rd Div B", 
+    "cat.ssl.robocup19": "3rd/4th Div B", 
     "cat.ssl.robocup18": "N/A",
 
     "cat.ssl.larc21": "1st",
