fix(pt.json): update ssl results

--- a/lang/pt.json
+++ b/lang/pt.json
@@ -109,7 +109,7 @@
     
     "cat.ssl.robocup21": "3° Div A/B<br>1° Desafio técnico<br> 5° Desafio de Hardware",
     "cat.ssl.robocup20": "Adiado",
-    "cat.ssl.robocup19": "3° Div B", 
+    "cat.ssl.robocup19": "3°/4° Div B", 
     "cat.ssl.robocup18": "N/A",
 
     "cat.ssl.larc21": "1°",
