temporary logo change 2022

--- a/lang/en.json
+++ b/lang/en.json
@@ -46,7 +46,7 @@
     "r": "Research",
     "r.text": "We research in all robotics field to improve our robots and we submit this works to some conferences.",
     "s.button": "Learn more",
-    "pat":"Our partners | Comming soon",
+    "pat":"Our Partners",
 
     "cat.ln": "Line Follower",
     "s.img1": "Line Follower prototype",
