--- a/lang/pt.json
+++ b/lang/pt.json
@@ -46,7 +46,7 @@
     "r": "Pesquisa",
     "r.text": "Fazemos pesquisas nas nossas áreas de atuação para melhorar nossos robôs e publicamos com esses trabalhos em algumas conferências.",
     "s.button": "Saiba mais",
-    "pat":"Nossos patrocinadores | Em breve",
+    "pat":"Nossos Patrocinadores",
 
     "cat.ln":"Seguidor de Linha",
     "s.img1":"Protótipo do seguidor de linha",
